# credit-risk-mvp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/calibration/: calibration.ipynb
notebooks/eda/: EDA.ipynb
notebooks/etl/: ETL.ipynb
notebooks/modeling/: logistic_regression.ipynb  random_forest.ipynb  support_vector_machine.ipynb
src/credit_risk/: calibrate.py  cli.py  io.py  logging_utils.py  score.py  score_bands.py  train.py
tests/: test_e2e_pipeline.py  test_platt_calibrator.py
