[project]
name = "credit-risk-mvp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "pyarrow>=14.0",
  "joblib>=1.3",
  "typer>=0.12",
  "rich>=13.0",
  "fsspec>=2024.0",
  "s3fs>=2024.0",
  "pytest>=7.0",
  "ruff>=0.14.14",
]

[project.scripts]
credit-risk = "credit_risk.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
